Scaffold For Login and Registration Pages

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home page</title>
+    <title>Login Page</title>
 </head>
 <body>
-    <h1>Main Home page</h1>
-    <a href="{{url_for('login')}}">Login Here</a>
+    <h1>Please Login Or Register An Account</h1>
     <a href="{{url_for('register')}}">Register Here</a>
+
 </body>
 </html>
