--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home page</title>
+    <title>Dashboard After Login</title>
 </head>
 <body>
-    <h1>Main Home page</h1>
-    <a href="{{url_for('login')}}">Login Here</a>
-    <a href="{{url_for('register')}}">Register Here</a>
+    <h1>Congrats you are logged In!!</h1>
 </body>
 </html>
