--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home page</title>
+    <title>Register</title>
 </head>
 <body>
-    <h1>Main Home page</h1>
+    <h1>Please Register Your Passkey Here, Or go to login if you have one already made</h1>
     <a href="{{url_for('login')}}">Login Here</a>
-    <a href="{{url_for('register')}}">Register Here</a>
 </body>
 </html>
