--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -6,6 +6,9 @@
     <title>Dashboard After Login</title>
 </head>
 <body>
-    <h1>Congrats you are logged In!!</h1>
+    <h1>Dashboard</h1>
+    <p>Congrats you are logged In! {{ email }}</p>
+    <p><a href="{{ url_for('logout') }}">Logout</a></p>
+
 </body>
 </html>
