Bug fixes , completed end points for back up codes, page for back up code generation , page for back uop code recovery is also done , routes name names chnages for better readability

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -22,6 +22,10 @@
     Lost your device? 
     <a href="{{ url_for('recover_request') }}" style="color: #0066cc;">
         Get a login link via email
+        <br>
+    </a>
+        <a href="{{ url_for('login_backup') }}" style="color: #0066cc;">
+        Login via Backup Code
     </a>
 </p>
     <script>
