--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -9,6 +9,8 @@
     <h1>Dashboard</h1>
     <p>Congrats you are logged In! {{ email }}</p>
     <p><a href="{{ url_for('logout') }}">Logout</a></p>
+    <p>Or Go To Settinga</p>
+    <p><a href="{{ url_for('settings') }}">settings</a></p>
 
 </body>
 </html>
