--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -14,10 +14,10 @@
                 
                 <ul class="list-unstyled">
                     <li class="mb-2">
-                        <a href="{{ url_for('change_Code') }}" class="btn btn-outline-primary btn-sm">Change Email</a>
+                        <a href="{{url_for('change_email')}}" class="btn btn-outline-primary btn-sm">Change Email</a>
                     </li>
                     <li class="mb-2">
-                        <a href="{{ url_for('change_email') }}" class="btn btn-outline-primary btn-sm">Manage Backup Codes</a>
+                        <a href="{{url_for('backup_code_page')}}" class="btn btn-outline-primary btn-sm">Manage Backup Codes</a>
                     </li>
                 </ul>
             </div>
